infra/k8s/user_service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: user-service
    template:
        metadata:
            labels:
                app: user-service
        spec:
            containers:
                - name: user-service
                  image: andres050588/user_service:v5
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3001
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "256Mi"
                          cpu: "250m"
