infra/k8s/user_service_mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-mysql
spec:
    replicas: 1
    selector:
        matchLabels:
            app: user-mysql
    template:
        metadata:
            labels:
                app: user-mysql
        spec:
            containers:
                - name: user-mysql
                  image: mysql:8
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "256Mi"
                          cpu: "250m"
                  ports:
                      - containerPort: 3306
                  volumeMounts:
                      - name: user-mysql-pvc
                        mountPath: /var/lib/mysql
            volumes:
                - name: user-mysql-pvc
                  persistentVolumeClaim:
                      claimName: user-mysql-pvc
---
