infra/k8s/order_service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: order-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: order-service
    template:
        metadata:
            labels:
                app: order-service
        spec:
            containers:
                - name: order-service
                  image: andres050588/order_service:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3003
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "256Mi"
                          cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
    name: order-service
spec:
    type: ClusterIP
    selector:
        app: order-service
    ports:
        - protocol: TCP
          port: 3003
          targetPort: 3003
