infra/k8s/ticket_service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticket-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticket-service
    template:
        metadata:
            labels:
                app: ticket-service
        spec:
            containers:
                - name: ticket-service
                  image: andres050588/ticket_service:v3
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3002
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "256Mi"
                          cpu: "250m"
---
# --- Service ---
apiVersion: v1
kind: Service
metadata:
    name: ticket-service
spec:
    selector:
        app: ticket-service
    ports:
        - protocol: TCP
          port: 3002
          targetPort: 3002
    type: ClusterIP
