infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ticketwave-ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /api/users
                    pathType: Prefix
                    backend:
                        service:
                            name: user-service
                            port:
                                number: 3001
                  - path: /api/tickets
                    pathType: Prefix
                    backend:
                        service:
                            name: ticket-service
                            port:
                                number: 3002
                  - path: /api/orders
                    pathType: Prefix
                    backend:
                        service:
                            name: order-service
                            port:
                                number: 3003
                  - path: /api/events
                    pathType: Prefix
                    backend:
                        service:
                            name: redisapi-service
                            port:
                                number: 3004
